# protein-analysis

./: README.md  pyproject.toml
protein-analysis-project/: analysis.py
tests/: test_protein_analysis_project.py
